<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:padding="@dimen/default_padding"
        android:layout_height="match_parent">

    <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/playerdetails_title_levels"
            android:text="@string/playerdetails_levels_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/playerdetails_half_guideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <com.github.tehras.ui.commonviews.views.LabelValue
            android:id="@+id/playerdetails_paragon_level"
            android:label="@string/playerdetails_paragon_level"
            app:layout_constraintTop_toBottomOf="@+id/playerdetails_title_levels"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playerdetails_half_guideline"
            android:layout_height="wrap_content"/>

    <com.github.tehras.ui.commonviews.views.LabelValue
            android:id="@+id/playerdetails_hardcore_level"
            android:label="@string/playerdetails_hardcore_level"
            app:layout_constraintTop_toBottomOf="@+id/playerdetails_paragon_level"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playerdetails_half_guideline"
            android:layout_height="wrap_content"/>

    <com.github.tehras.ui.commonviews.views.LabelValue
            android:id="@+id/playerdetails_season_hardcore_level"
            android:label="@string/playerdetails_hardcore_season_level"
            app:layout_constraintTop_toBottomOf="@+id/playerdetails_title_levels"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playerdetails_half_guideline"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>